--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <header>
+        <!--
         <div class="logo">
             <a class="logo__link" href="#home">
                 <i class="fa-solid fa-k"></i> 
@@ -33,16 +34,15 @@
                 <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
             </ul>
         </nav>
+        -->
+        <h2 class="section__title section__title--intro">
+           the last fi<i class="fa-solid fa-v"></i>e
+        </h2>
+        <h2><i class="fa-solid fa-chart-pie"></i></h2>
     </header>
 
     <!-- Introduction -->
-    <section class="intro" id="home">
-        <h1 class="section__title section__title--intro">
-            Stephen Curry <strong>#30 Guard</strong>
-        </h1>
-        <p class="section__subtitle section__subtitle--intro">Golden State Warriors</p>
-        <img src="img/curry.png" alt="a picture of Kevin smiling" class="intro__img">
-    </section>
+    
 
     <!-- My Services
     <section class="my-services" id="services">
@@ -84,7 +84,20 @@
 
     <!-- My Work -->
     <section class="my-work" id="work">
-        <h2 class="section__title section__title--work">Averages From Last 5 Games Played</h2>
+        <button class="switchPlayer">Switch Player</button>
+        <h2 class="playerName">
+            Player
+        </h2>
+        <h2 class="playerSize">
+             #
+        </h2>
+        <h2 class="playerPosition">
+            Position
+        </h2>
+        <h2 class="playerTeam">
+            Team
+        </h2>
+        <h2 class="section__title section__title--work">Last 5 Games Played Averages</h2>
 
         <table class="avgTable">
             <tr>
@@ -133,11 +146,11 @@
               </tr>
           </table>
 
-        <h2 class="section__title section__title--work2">Stats From Last 5 Games Played</h2>
+        <h2 class="section__title section__title--work2">Last 5 Games Played</h2>
 
         <div class="portfolio">
 
-            <div>
+            <div class="gameDiv">
                 <h3>Game 1</h3>
 
                 <table class="gameTables">
@@ -188,40 +201,208 @@
                   </table>
             </div>
 
-            <div>
+            <div class="gameDiv">
                 <h3>Game 2</h3>
-                <p class="ptsGame2">Pts</p>
-                <p class="astGame2">Ast</p>
-                <p class="rebGame2">Reb</p>
-                <p class="blkGame2">Blk</p>
-                <p class="stlGame2">Stl</p>
+
+                <table class="gameTables">
+                    <tr>
+                      <th>PTS</th>
+                      <td class="ptsGame2"></td>
+                      <th>3P</th>
+                      <td class="threePgame2"></td>
+                      <th>2P</th>
+                      <td class="twoPgame2"></td>
+                      <th>FT%</th>
+                      <td class="ftpGame2"></td>
+                    </tr>
+                    <tr>
+                      <th>AST</th>
+                      <td class="astGame2"></td>
+                      <th>3PA</th>
+                      <td class="threePaGame2"></td>
+                      <th>2PA</th>
+                      <td class="twoPaGame2"></td>
+                      <th>PF</th>
+                      <td class="pfGame2"></td>
+                    </tr>
+                    <tr>
+                      <th>REB</th>
+                      <td class="rebGame2"></td>
+                      <th>3P%</th>
+                      <td class="threePpGame2"></td>
+                      <th>2P%</th>
+                      <td class="twoPpGame2"></td>
+                    </tr>
+                    <tr>
+                      <th>BLK</th>
+                      <td class="blkGame2"></td>
+                      <th>MIN</th>
+                      <td class="minGame2"></td>
+                      <th>FT</th>
+                      <td class="ftGame2"></td>
+                    </tr>
+                    <tr>
+                      <th>STL</th>
+                      <td class="stlGame2"></td>
+                      <th>TO</th>
+                      <td class="toGame2"></td>
+                      <th>FTA</th>
+                      <td class="ftaGame2"></td>
+                    </tr>
+                  </table>
             </div>
 
-            <div>
+            <div class="gameDiv">
                 <h3>Game 3</h3>
-                <p class="ptsGame3">Pts</p>
-                <p class="astGame3">Ast</p>
-                <p class="rebGame3">Reb</p>
-                <p class="blkGame3">Blk</p>
-                <p class="stlGame3">Stl</p>
+
+                <table class="gameTables">
+                    <tr>
+                      <th>PTS</th>
+                      <td class="ptsGame3"></td>
+                      <th>3P</th>
+                      <td class="threePgame3"></td>
+                      <th>2P</th>
+                      <td class="twoPgame3"></td>
+                      <th>FT%</th>
+                      <td class="ftpGame3"></td>
+                    </tr>
+                    <tr>
+                      <th>AST</th>
+                      <td class="astGame3"></td>
+                      <th>3PA</th>
+                      <td class="threePaGame3"></td>
+                      <th>2PA</th>
+                      <td class="twoPaGame3"></td>
+                      <th>PF</th>
+                      <td class="pfGame3"></td>
+                    </tr>
+                    <tr>
+                      <th>REB</th>
+                      <td class="rebGame3"></td>
+                      <th>3P%</th>
+                      <td class="threePpGame3"></td>
+                      <th>2P%</th>
+                      <td class="twoPpGame3"></td>
+                    </tr>
+                    <tr>
+                      <th>BLK</th>
+                      <td class="blkGame3"></td>
+                      <th>MIN</th>
+                      <td class="minGame3"></td>
+                      <th>FT</th>
+                      <td class="ftGame3"></td>
+                    </tr>
+                    <tr>
+                      <th>STL</th>
+                      <td class="stlGame3"></td>
+                      <th>TO</th>
+                      <td class="toGame3"></td>
+                      <th>FTA</th>
+                      <td class="ftaGame3"></td>
+                    </tr>
+                  </table>
             </div>
 
-            <div>
+            <div class="gameDiv">
                 <h3>Game 4</h3>
-                <p class="ptsGame4">Pts</p>
-                <p class="astGame4">Ast</p>
-                <p class="rebGame4">Reb</p>
-                <p class="blkGame4">Blk</p>
-                <p class="stlGame4">Stl</p>
+
+                <table class="gameTables">
+                    <tr>
+                      <th>PTS</th>
+                      <td class="ptsGame4"></td>
+                      <th>3P</th>
+                      <td class="threePgame4"></td>
+                      <th>2P</th>
+                      <td class="twoPgame4"></td>
+                      <th>FT%</th>
+                      <td class="ftpGame4"></td>
+                    </tr>
+                    <tr>
+                      <th>AST</th>
+                      <td class="astGame4"></td>
+                      <th>3PA</th>
+                      <td class="threePaGame4"></td>
+                      <th>2PA</th>
+                      <td class="twoPaGame4"></td>
+                      <th>PF</th>
+                      <td class="pfGame4"></td>
+                    </tr>
+                    <tr>
+                      <th>REB</th>
+                      <td class="rebGame4"></td>
+                      <th>3P%</th>
+                      <td class="threePpGame4"></td>
+                      <th>2P%</th>
+                      <td class="twoPpGame4"></td>
+                    </tr>
+                    <tr>
+                      <th>BLK</th>
+                      <td class="blkGame4"></td>
+                      <th>MIN</th>
+                      <td class="minGame4"></td>
+                      <th>FT</th>
+                      <td class="ftGame4"></td>
+                    </tr>
+                    <tr>
+                      <th>STL</th>
+                      <td class="stlGame4"></td>
+                      <th>TO</th>
+                      <td class="toGame4"></td>
+                      <th>FTA</th>
+                      <td class="ftaGame4"></td>
+                    </tr>
+                  </table>
             </div>
 
-            <div>
+            <div class="gameDiv">
                 <h3>Game 5</h3>
-                <p class="ptsGame5">Pts</p>
-                <p class="astGame5">Ast</p>
-                <p class="rebGame5">Reb</p>
-                <p class="blkGame5">Blk</p>
-                <p class="stlGame5">Stl</p>
+
+                <table class="gameTables">
+                    <tr>
+                      <th>PTS</th>
+                      <td class="ptsGame5"></td>
+                      <th>3P</th>
+                      <td class="threePgame5"></td>
+                      <th>2P</th>
+                      <td class="twoPgame5"></td>
+                      <th>FT%</th>
+                      <td class="ftpGame5"></td>
+                    </tr>
+                    <tr>
+                      <th>AST</th>
+                      <td class="astGame5"></td>
+                      <th>3PA</th>
+                      <td class="threePaGame5"></td>
+                      <th>2PA</th>
+                      <td class="twoPaGame5"></td>
+                      <th>PF</th>
+                      <td class="pfGame5"></td>
+                    </tr>
+                    <tr>
+                      <th>REB</th>
+                      <td class="rebGame5"></td>
+                      <th>3P%</th>
+                      <td class="threePpGame5"></td>
+                      <th>2P%</th>
+                      <td class="twoPpGame5"></td>
+                    </tr>
+                    <tr>
+                      <th>BLK</th>
+                      <td class="blkGame5"></td>
+                      <th>MIN</th>
+                      <td class="minGame5"></td>
+                      <th>FT</th>
+                      <td class="ftGame5"></td>
+                    </tr>
+                    <tr>
+                      <th>STL</th>
+                      <td class="stlGame5"></td>
+                      <th>TO</th>
+                      <td class="toGame5"></td>
+                      <th>FTA</th>
+                      <td class="ftaGame5"></td>
+                    </tr>
+                  </table>
             </div>
 
         </div>
