--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
             <div class="gameDiv">
                 <h3>Game 1</h3>
-
+                <p class="game1score">W 120-107</p>
                 <table class="gameTables">
                     <tr>
                       <th>PTS</th>
@@ -203,7 +203,7 @@
 
             <div class="gameDiv">
                 <h3>Game 2</h3>
-
+                <p class="game2score">W 120-107</p>
                 <table class="gameTables">
                     <tr>
                       <th>PTS</th>
@@ -254,7 +254,7 @@
 
             <div class="gameDiv">
                 <h3>Game 3</h3>
-
+                <p class="game3score">W 120-107</p>
                 <table class="gameTables">
                     <tr>
                       <th>PTS</th>
@@ -305,7 +305,7 @@
 
             <div class="gameDiv">
                 <h3>Game 4</h3>
-
+                <p class="game4score">W 120-107</p>
                 <table class="gameTables">
                     <tr>
                       <th>PTS</th>
@@ -356,7 +356,7 @@
 
             <div class="gameDiv">
                 <h3>Game 5</h3>
-
+                <p class="game5score">W 120-107</p>
                 <table class="gameTables">
                     <tr>
                       <th>PTS</th>
