added 5 game carousel

--- a/index.html
+++ b/index.html
@@ -89,15 +89,12 @@
             Player
         </h2>
         <h2 class="playerSize">
-             #
-        </h2>
-        <h2 class="playerPosition">
-            Position
+             Size, Position
         </h2>
         <h2 class="playerTeam">
             Team
         </h2>
-        <h2 class="section__title section__title--work">Last 5 Games Played Averages</h2>
+        <h2 class="section__title section__title--work">last 5 averages<strong></strong></h2>
 
         <table class="avgTable">
             <tr>
@@ -146,12 +143,12 @@
               </tr>
           </table>
 
-        <h2 class="section__title section__title--work2">Last 5 Games Played</h2>
-
+        <h2 class="section__title section__title--work2">last 5 games<strong></strong></h2>
+<!--
         <div class="portfolio">
 
             <div class="gameDiv">
-                <h3>Game 1</h3>
+                <h3 class="game1date">Game 1</h3>
                 <p class="game1score">W 120-107</p>
                 <table class="gameTables">
                     <tr>
@@ -202,7 +199,7 @@
             </div>
 
             <div class="gameDiv">
-                <h3>Game 2</h3>
+                <h3 class="game2date">Game 2</h3>
                 <p class="game2score">W 120-107</p>
                 <table class="gameTables">
                     <tr>
@@ -253,7 +250,7 @@
             </div>
 
             <div class="gameDiv">
-                <h3>Game 3</h3>
+                <h3 class="game3date">Game 3</h3>
                 <p class="game3score">W 120-107</p>
                 <table class="gameTables">
                     <tr>
@@ -304,7 +301,7 @@
             </div>
 
             <div class="gameDiv">
-                <h3>Game 4</h3>
+                <h3 class="game4date">Game 4</h3>
                 <p class="game4score">W 120-107</p>
                 <table class="gameTables">
                     <tr>
@@ -355,7 +352,7 @@
             </div>
 
             <div class="gameDiv">
-                <h3>Game 5</h3>
+                <h3 class="game5date">Game 5</h3>
                 <p class="game5score">W 120-107</p>
                 <table class="gameTables">
                     <tr>
@@ -406,6 +403,290 @@
             </div>
 
         </div>
+-->
+        <section class="carousel" aria-label="carousel" Tabindex="0">
+          <a class="carousel__skip-link" href="#skip-link">Skip the Carousel</a>
+          <div class="slides">
+            <div class="slides-item" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+
+              <div class="gameDiv  slide-1">
+                <h3 class="game1date">Game 1</h3>
+                <p class="game1score">W 120-107</p>
+                <table class="gameTables">
+                    <tr>
+                      <th>PTS</th>
+                      <td class="ptsGame1"></td>
+                      <th>3P</th>
+                      <td class="threePgame1"></td>
+                      <th>2P</th>
+                      <td class="twoPgame1"></td>
+                      <th>FT%</th>
+                      <td class="ftpGame1"></td>
+                    </tr>
+                    <tr>
+                      <th>AST</th>
+                      <td class="astGame1"></td>
+                      <th>3PA</th>
+                      <td class="threePaGame1"></td>
+                      <th>2PA</th>
+                      <td class="twoPaGame1"></td>
+                      <th>PF</th>
+                      <td class="pfGame1"></td>
+                    </tr>
+                    <tr>
+                      <th>REB</th>
+                      <td class="rebGame1"></td>
+                      <th>3P%</th>
+                      <td class="threePpGame1"></td>
+                      <th>2P%</th>
+                      <td class="twoPpGame1"></td>
+                    </tr>
+                    <tr>
+                      <th>BLK</th>
+                      <td class="blkGame1"></td>
+                      <th>MIN</th>
+                      <td class="minGame1"></td>
+                      <th>FT</th>
+                      <td class="ftGame1"></td>
+                    </tr>
+                    <tr>
+                      <th>STL</th>
+                      <td class="stlGame1"></td>
+                      <th>TO</th>
+                      <td class="toGame1"></td>
+                      <th>FTA</th>
+                      <td class="ftaGame1"></td>
+                    </tr>
+                  </table>
+            </div>
+
+            </div>
+            <div class="slides-item" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
+
+              <div class="gameDiv slide-2">
+                <h3 class="game2date">Game 2</h3>
+                <p class="game2score">W 120-107</p>
+                <table class="gameTables">
+                    <tr>
+                      <th>PTS</th>
+                      <td class="ptsGame2"></td>
+                      <th>3P</th>
+                      <td class="threePgame2"></td>
+                      <th>2P</th>
+                      <td class="twoPgame2"></td>
+                      <th>FT%</th>
+                      <td class="ftpGame2"></td>
+                    </tr>
+                    <tr>
+                      <th>AST</th>
+                      <td class="astGame2"></td>
+                      <th>3PA</th>
+                      <td class="threePaGame2"></td>
+                      <th>2PA</th>
+                      <td class="twoPaGame2"></td>
+                      <th>PF</th>
+                      <td class="pfGame2"></td>
+                    </tr>
+                    <tr>
+                      <th>REB</th>
+                      <td class="rebGame2"></td>
+                      <th>3P%</th>
+                      <td class="threePpGame2"></td>
+                      <th>2P%</th>
+                      <td class="twoPpGame2"></td>
+                    </tr>
+                    <tr>
+                      <th>BLK</th>
+                      <td class="blkGame2"></td>
+                      <th>MIN</th>
+                      <td class="minGame2"></td>
+                      <th>FT</th>
+                      <td class="ftGame2"></td>
+                    </tr>
+                    <tr>
+                      <th>STL</th>
+                      <td class="stlGame2"></td>
+                      <th>TO</th>
+                      <td class="toGame2"></td>
+                      <th>FTA</th>
+                      <td class="ftaGame2"></td>
+                    </tr>
+                  </table>
+            </div>
+
+            </div>
+            <div class="slides-item" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
+
+              <div class="gameDiv slide-3">
+                <h3 class="game3date">Game 3</h3>
+                <p class="game3score">W 120-107</p>
+                <table class="gameTables">
+                    <tr>
+                      <th>PTS</th>
+                      <td class="ptsGame3"></td>
+                      <th>3P</th>
+                      <td class="threePgame3"></td>
+                      <th>2P</th>
+                      <td class="twoPgame3"></td>
+                      <th>FT%</th>
+                      <td class="ftpGame3"></td>
+                    </tr>
+                    <tr>
+                      <th>AST</th>
+                      <td class="astGame3"></td>
+                      <th>3PA</th>
+                      <td class="threePaGame3"></td>
+                      <th>2PA</th>
+                      <td class="twoPaGame3"></td>
+                      <th>PF</th>
+                      <td class="pfGame3"></td>
+                    </tr>
+                    <tr>
+                      <th>REB</th>
+                      <td class="rebGame3"></td>
+                      <th>3P%</th>
+                      <td class="threePpGame3"></td>
+                      <th>2P%</th>
+                      <td class="twoPpGame3"></td>
+                    </tr>
+                    <tr>
+                      <th>BLK</th>
+                      <td class="blkGame3"></td>
+                      <th>MIN</th>
+                      <td class="minGame3"></td>
+                      <th>FT</th>
+                      <td class="ftGame3"></td>
+                    </tr>
+                    <tr>
+                      <th>STL</th>
+                      <td class="stlGame3"></td>
+                      <th>TO</th>
+                      <td class="toGame3"></td>
+                      <th>FTA</th>
+                      <td class="ftaGame3"></td>
+                    </tr>
+                  </table>
+            </div>
+
+            </div>
+            <div class="slides-item" id="slide-4" aria-label="slide 4 of 5" tabindex="0">
+
+              <div class="gameDiv slide-4">
+                <h3 class="game4date">Game 4</h3>
+                <p class="game4score">W 120-107</p>
+                <table class="gameTables">
+                    <tr>
+                      <th>PTS</th>
+                      <td class="ptsGame4"></td>
+                      <th>3P</th>
+                      <td class="threePgame4"></td>
+                      <th>2P</th>
+                      <td class="twoPgame4"></td>
+                      <th>FT%</th>
+                      <td class="ftpGame4"></td>
+                    </tr>
+                    <tr>
+                      <th>AST</th>
+                      <td class="astGame4"></td>
+                      <th>3PA</th>
+                      <td class="threePaGame4"></td>
+                      <th>2PA</th>
+                      <td class="twoPaGame4"></td>
+                      <th>PF</th>
+                      <td class="pfGame4"></td>
+                    </tr>
+                    <tr>
+                      <th>REB</th>
+                      <td class="rebGame4"></td>
+                      <th>3P%</th>
+                      <td class="threePpGame4"></td>
+                      <th>2P%</th>
+                      <td class="twoPpGame4"></td>
+                    </tr>
+                    <tr>
+                      <th>BLK</th>
+                      <td class="blkGame4"></td>
+                      <th>MIN</th>
+                      <td class="minGame4"></td>
+                      <th>FT</th>
+                      <td class="ftGame4"></td>
+                    </tr>
+                    <tr>
+                      <th>STL</th>
+                      <td class="stlGame4"></td>
+                      <th>TO</th>
+                      <td class="toGame4"></td>
+                      <th>FTA</th>
+                      <td class="ftaGame4"></td>
+                    </tr>
+                  </table>
+            </div>
+
+            </div>
+            <div class="slides-item" id="slide-5" aria-label="slide 5 of 5" tabindex="0">
+
+              <div class="gameDiv slide-5">
+                <h3 class="game5date">Game 5</h3>
+                <p class="game5score">W 120-107</p>
+                <table class="gameTables">
+                    <tr>
+                      <th>PTS</th>
+                      <td class="ptsGame5"></td>
+                      <th>3P</th>
+                      <td class="threePgame5"></td>
+                      <th>2P</th>
+                      <td class="twoPgame5"></td>
+                      <th>FT%</th>
+                      <td class="ftpGame5"></td>
+                    </tr>
+                    <tr>
+                      <th>AST</th>
+                      <td class="astGame5"></td>
+                      <th>3PA</th>
+                      <td class="threePaGame5"></td>
+                      <th>2PA</th>
+                      <td class="twoPaGame5"></td>
+                      <th>PF</th>
+                      <td class="pfGame5"></td>
+                    </tr>
+                    <tr>
+                      <th>REB</th>
+                      <td class="rebGame5"></td>
+                      <th>3P%</th>
+                      <td class="threePpGame5"></td>
+                      <th>2P%</th>
+                      <td class="twoPpGame5"></td>
+                    </tr>
+                    <tr>
+                      <th>BLK</th>
+                      <td class="blkGame5"></td>
+                      <th>MIN</th>
+                      <td class="minGame5"></td>
+                      <th>FT</th>
+                      <td class="ftGame5"></td>
+                    </tr>
+                    <tr>
+                      <th>STL</th>
+                      <td class="stlGame5"></td>
+                      <th>TO</th>
+                      <td class="toGame5"></td>
+                      <th>FTA</th>
+                      <td class="ftaGame5"></td>
+                    </tr>
+                  </table>
+            </div>
+
+            </div>       
+          </div>
+          <div class="carousel__nav">
+            <a class="slider-nav" href="#slide-1" aria-label="Go to slide 1">1</a>
+            <a class="slider-nav" href="#slide-2" aria-label="Go to slide 2">2</a>
+            <a class="slider-nav" href="#slide-3" aria-label="Go to slide 3">3</a>
+            <a class="slider-nav" href="#slide-4" aria-label="Go to slide 4">4</a>
+            <a class="slider-nav" href="#slide-5" aria-label="Go to slide 5">5</a>
+          </div>
+          <div class="carousel__skip-message" id="skip-link" tabindex="0"></div>
+        </section>
     </section>
 
     <!-- Footer -->
