add placeholder stats

--- a/index.html
+++ b/index.html
@@ -415,13 +415,13 @@
                 <table class="gameTables">
                     <tr>
                       <th>PTS</th>
-                      <td class="ptsGame1"></td>
+                      <td class="ptsGame1">XX</td>
                       <th>3P</th>
-                      <td class="threePgame1"></td>
+                      <td class="threePgame1">XX</td>
                       <th>2P</th>
-                      <td class="twoPgame1"></td>
+                      <td class="twoPgame1">XX</td>
                       <th>FT%</th>
-                      <td class="ftpGame1"></td>
+                      <td class="ftpGame1">X.XX</td>
                     </tr>
                     <tr>
                       <th>AST</th>
