--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@
                       <th>REB</th>
                       <td class="rebGame1"></td>
                       <th>3P%</th>
-                      <td class="threePpGame1"></td>
+                      <td class="threePpGame1">X.XX</td>
                       <th>2P%</th>
-                      <td class="twoPpGame1"></td>
+                      <td class="twoPpGame1">X.XX</td>
                     </tr>
                     <tr>
                       <th>BLK</th>
