improve search and styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nba-app</title>
+    <title>the last five</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 
     <!-- Update these with other Google fonts? -->
@@ -41,49 +41,14 @@
         <h2><i class="fa-solid fa-chart-pie"></i></h2>
     </header>
 
-    <!-- Introduction -->
-    
-
-    <!-- My Services
-    <section class="my-services" id="services">
-        <h2 class="section__title section__title--services">What I do</h2>
-        <div class="services">
-            <div class="service">
-                <h3>Web Development</h3>
-                    <p>I have 3+ years of experience as a developer primarily working with HTML, CSS, JavaScript, Java, and SQL. I have experience working with APIs, implementing APIs into web applications, and testing API calls with Postman. I have been a part of development teams using Agile methodologies and Scrum framework. I love solving problems, learning new languages and technologies, and focusing on user-centered design.</p>
-            </div> 
-            <div class="service">
-                <h3>Customer Experience</h3>
-                    <p>I have 5+ years of experience in varying levels of customer service - from supporting customers via email, chat, phone, and video calls - to working closely with stakeholders on large scale projects. I have experience leading meetings and product demos. I lean on my strong communication and interpersonal skills to empathize with users and assist in solving their complex, technical issues. I am passionate about helping others and improving the user experience.</p>
-            </div> 
-            <div class="service">
-                <h3>Documentation</h3>
-                    <p>I have experience creating, maintaining, and updating resources and technical documentation. As a developer, I utilized JIRA for project management, issue tracking, and creating/executing test cases. For version control, I have worked with Subversion, Git, GitHub, and GitLab. As a developer support specialist, I worked with Guru and Confluence for documentation and knowledge bases.</p>
-            </div> 
-        </div>
-    -->
-    <!--
-        <a href="#work" class="btn">See My Work</a>
-    </section>
-
- 
-    <section class="about-me" id="about">
-        <h2 class="section__title section__title--about">Stephen Curry</h2>
-        <p class="section__subtitle section__subtitle--about">Golden State Warriors</p>
-
-        <div class="about-me__body">
-            <p>Age</p>
-            <p>Height</p>
-            <p>Weight</p>
-            <p>Position</p>
-        </div>
-
-        <img src="img/curry.png" alt="Kevin walking on the beach" class="about-me__img">
-    </section>
--->
-
     <!-- My Work -->
     <section class="my-work" id="work">
+
+      <div class="tagline">
+        <h1>The Numbers That Matter</h2>
+          <hr />
+        <h3>Stats from the last 5 games played for any NBA player</h3>
+      </div>
         
         <form id="searchForm" autocomplete="off" >
           <div class="search" style="width:300px;">
@@ -93,6 +58,10 @@
         </form>
 
         <div class="searchResults">
+
+        </div>
+
+        <div class="searchNotice">
 
         </div>
 
