--- a/index.html
+++ b/index.html
@@ -49,14 +49,26 @@
           <hr />
         <h3>Stats from the last 5 games played for any NBA player</h3>
       </div>
-        
         <form id="searchForm" autocomplete="off" >
-          <div class="search" style="width:300px;">
-            <input id="searchPlayer" type="text" name="playerName" placeholder="Player Name">
-          </div>
-          <input type="submit" class="searchButton" value="Search">
-        </form>
 
+          <div class="searchbox">
+            <svg 
+    aria-hidden="true"
+    viewBox="0 0 24 24"
+  >
+    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z" />
+  </svg>
+            <input 
+              aria-label="Search for a player" 
+              autocomplete="off"
+              inputmode="search" 
+              placeholder="Enter player name"
+              type="search"
+              name="playerName"
+              id="searchPlayer" 
+            />
+          </div>
+        </form>
         <div class="searchResults">
 
         </div>
@@ -673,7 +685,6 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="mailto:hello@kevin.dev" class="footer__link">hello@kevin.dev</a>
         <ul class="social-list">
             <li class="social-list__item">
                 <a class="social-list__link" href="https://codepen.io">
