--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <ul class="social-list">
+        <!--<ul class="social-list">
             <li class="social-list__item">
                 <a class="social-list__link" href="https://codepen.io">
                     <i class="fa-brands fa-codepen"></i>
@@ -709,7 +709,8 @@
                     <i class="fa-brands fa-github"></i>
                 </a>
             </li>
-        </ul>
+        </ul>-->
+        <p>Powered by the <a href="https://www.balldontlie.io/" target="_blank">balldontlie</a> API</p>
     </footer>
 
     <script type="module" src="index.js"></script>
